# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import configRouter from "./config";
+import authRouter from "./auth";
+import adminRouter from "./admin";
+import adsRouter from "./ads";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(configRouter);
+router.use(authRouter);
+router.use(adminRouter);
+router.use(adsRouter);
 
 export default router;
